partially completed live project in meetup

--- a/app/views/restaurants/_review_cards.html.erb
+++ b/app/views/restaurants/_review_cards.html.erb
@@ -1,6 +1,6 @@
 <ul class="list-group">
-  <li class="list-group-item active text-center" aria-current="true">Review</li>
-  <%= @reviews.each do |review| %>
+  <li class="list-group-item active text-center">Review</li>
+  <% @reviews.each do |review| %>
     <li class="list-group-item">
       <div class="card">
         <div class="card-body">
